--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <h1>Welcome to Eaglecraft</h1>
     <br>
     <a href="/DragonX_V4.html">Hacks</a>
-
+    <a href="/hui/">good game</a>
 </body>
 </html>
