--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Your content goes here -->
     <h1>Welcome to Eaglecraft</h1>
     <br>
-    <a href="/DragonX_V4.html">Hacks</a>
+    <a href="/PremiumDragonv2.html">Hacks</a>
     <br>
     <a href="/hui/">good game</a>
 </body>
