--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <br>
     <a href="/PremiumDragonv2.html">Hacks</a>
     <br>
-    <a href="/WHAT I SUGGEST.html">good game</a>
+    <a href="/WHAT I SUGGEST.html">game</a>
 </body>
 </html>
